<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffdddddd"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/select_players_h1"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ff000000"
            android:paddingTop="15dp" >
        </LinearLayout>
    </LinearLayout>

    <!-- Note built-in ids for 'list' and 'empty' -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp" >

        <LinearLayout
            android:id="@+id/check_layout"
            android:layout_width="0dp"
            android:layout_height="395dp"
            android:layout_weight="0"
            android:orientation="vertical"
            android:paddingTop="4dp" >
        </LinearLayout>

        <ListView
            android:id="@android:id/list"
            android:layout_width="wrap_content"
            android:layout_height="395dp" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/empty"
            android:textColor="#FFDC0918"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <Button
            android:id="@+id/first_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_pressed"
            android:onClick="goMatchBoard"
            android:text="@string/confirm"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>